# pw-capture

./: Cargo.toml  LICENSE-MIT  README.md  meson.build  meson_options.txt
build-aux/: layer-manifest.json.in  meson-cargo.sh  pw-capture.sh.in
client/: Cargo.toml
client/src/: client.rs  format.rs  lib.rs  spa_utils.rs  stream.rs  utils.rs
cursor/: Cargo.toml
cursor/src/: lib.rs  utils.rs  xcb.rs
cursor/src/wayland/: mod.rs  sys.rs  wl_lib.rs
gl/: .envrc  Cargo.toml
gl-sys/: Cargo.toml  build.rs
gl-sys/src/: egl_sys.rs  glx_sys.rs  lib.rs
gl/src/: elfhack.rs  lib.rs
gl/src/interface/: implementation.rs  mod.rs  state.rs  types.rs  wl_impl.rs
gl/src/utils/: egl.rs  logger.rs  mod.rs  x11_lib.rs
vulkan/: .envrc  Cargo.toml  layer.json
vulkan/src/: lib.rs
vulkan/src/utils/: format_info.rs  logger.rs  mod.rs  vk_helper.rs
