[package]
name = "pw-capture-client"
description = "PipeWire client library specialized for video capture"
version = "0.0.1"
edition = "2021"
rust-version = "1.64.0"
authors = ["Huang-Huang Bao <i@eh5.me>"]
homepage = "https://github.com/EHfive/pw-capture"
repository = "https://github.com/EHfive/pw-capture"
license = "MIT"

[dependencies]
anyhow = "1.0.68"
crossbeam-channel = { version = "0.5.6", default-features = false }
dashmap = "5.4.0"
escher = { version = "0.3.0", git = "https://github.com/petrosagg/escher" }
libspa = { git = "https://gitlab.freedesktop.org/eh5/pipewire-rs", branch = "pw-capture" }
libspa-sys = { git = "https://gitlab.freedesktop.org/eh5/pipewire-rs", branch = "pw-capture" }
log = "*"
num_enum = "0.5.9"
pipewire = { git = "https://gitlab.freedesktop.org/eh5/pipewire-rs", branch = "pw-capture", features = [
    "v0_3_41",
] }
pipewire-sys = { git = "https://gitlab.freedesktop.org/eh5/pipewire-rs", branch = "pw-capture" }

[dependencies.ash]
version = "0.37.1"
default-features = false
optional = true

[dependencies.educe]
version = "0.4.20"
default-features = false
features = ["Debug"]

[dependencies.libc]
version = "0.2.139"
default-features = false

[dependencies.trait-enumizer]
version = "0.1.1"
features = ["crossbeam-channel"]

[features]
default = []
frontend_vulkan = ["ash"] # Vulkan image handle
frontend_gl = []          # GL texture handle
