[package]
name = "pw-capture-gl"
description = "PW Capture OpenGL intercept layer"
version = "0.0.1"
edition = "2021"
rust-version = "1.64.0"
authors = ["Huang-Huang Bao <i@eh5.me>"]
homepage = "https://github.com/EHfive/pw-capture"
repository = "https://github.com/EHfive/pw-capture"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.68"
dashmap = "5.4.0"
function_name = "0.3.0"
once_cell = "1.17.0"

[dependencies.elf]
version = "0.7.1"
default-features = false

[dependencies.libc]
version = "0.2.139"
default-features = false

[dependencies.log]
version = "0.4.17"
features = ["std", "release_max_level_info"]

[dependencies.pw-capture-client]
path = "../client"
features = ["frontend_gl"]

[dependencies.pw-capture-gl-sys]
path = "../gl-sys"

[dependencies.sentinel]
version = "0.4.0"
default-features = false

[features]
default = []
backtrace = ["anyhow/backtrace"]
