[package]
name = "pw-capture-vk"
description = "PW Capture Vulkan Layer"
version = "0.0.1"
edition = "2021"
rust-version = "1.64.0"
authors = ["Huang-Huang Bao <i@eh5.me>"]
homepage = "https://github.com/EHfive/pw-capture"
repository = "https://github.com/EHfive/pw-capture"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.68"
ash-layer = { git = "https://github.com/EHfive/ash-layer" }
concat-idents = "1.1.4"
dashmap = "5.4.0"
function_name = "0.3.0"
once_cell = "1.17.0"

[dependencies.ash]
version = "0.37.1"
default-features = false

[dependencies.libc]
version = "0.2.139"
default-features = false

[dependencies.log]
version = "0.4.17"
features = ["std", "release_max_level_trace"]

[dependencies.pw-capture-client]
path = "../client"
features = ["frontend_vulkan"]

[features]
default = []
backtrace = ["anyhow/backtrace"]
